refactor(engine): 移除旧版动作执行相关代码并重构配置构建逻辑
- 删除旧的动作执行接口和相关实现类（ActionConfig, ActionContext, ActionEngine 等）
- 用新注解 @AiTask 和 @AiTaskParam 替代旧 @AiAction 和相关机制
- 引入新的任务执行配置 TaskExecuteConfig，替代 ActionConfig
- 优化类路径扫描器，支持泛用注解扫描，错误提示更清晰
- 改进 AiTaskConfigBuilder，拆分任务基础配置与字段构建逻辑
- 新增注解 @AiTaskParam 定义参数收集 DTO 类及关联规则
- 移除动作注册、结果和异常类，转向后续统一机制
- 新增 @AiPostTask 注解替代旧版后置动作标记
- 各注释和文档更新，代码结构更清晰严谨，便于扩展维护