@@ -1,47 +1,41 @@
-package com.link.easyai.starter.engine.action.builtin;
+package com.link.easyai.starter.engine.task.builtin;
 
-import com.link.easyai.starter.engine.AnnotationAiTaskConfigService;
-import com.link.easyai.starter.engine.action.ActionExecutor;
-import com.link.easyai.starter.engine.action.ActionResult;
-import com.link.easyai.starter.engine.action.AiAction;
-import com.link.easyai.starter.engine.config.AiTaskConfig;
-import com.link.easyai.starter.engine.context.ActionContext;
+import com.link.easyai.starter.engine.context.ExecuteContext;
+import com.link.easyai.starter.engine.task.AiTask;
+import com.link.easyai.starter.engine.task.TaskExecutor;
+import com.link.easyai.starter.engine.task.TaskRegistry;
+import com.link.easyai.starter.engine.task.TaskResult;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 /**
- * 框架内置：功能介绍业务动作（type = FEATURE_INTRO）。
+ * 框架内置：功能介绍任务（type = FEATURE_INTRO）。
  * <p>
  * 当用户询问系统能力、使用方式、支持哪些操作时触发。
- * <strong>不硬编码功能清单</strong>，而是动态扫描所有 {@link AiTaskConfig}
- * （来自 {@code @AiTask} 注解），读取其 name / description / keywords 元信息，
+ * 动态扫描 {@link TaskRegistry} 中所有已注册的 {@link TaskExecutor}，
+ * 读取其 {@link AiTask} 注解上的 name / description / triggers 元信息，
  * 实时生成功能列表。
  * <p>
- * 新增业务场景时只需在 {@code @AiTask} 上填写元信息，无需修改本类。
- * 内置任务（如本类自身）不会出现在列表中。
- * <p>
- * 可选字段 {@code interestTopic}（想了解的功能方向）由映射引擎传入，
- * 若用户指定了具体方向则聚焦介绍，否则返回全量功能清单。
+ * 新增业务任务时只需在 {@code @AiTask} 上填写元信息，无需修改本类。
+ * 标注了 {@code hidden = true} 的任务不会出现在列表中。
  */
-@AiAction(value = "FEATURE_INTRO", hidden = true)
-public class FeatureIntroAction implements ActionExecutor {
+@AiTask(value = "FEATURE_INTRO", hidden = true)
+public class FeatureIntroTask implements TaskExecutor {
 
-    private static final Logger log = LoggerFactory.getLogger(FeatureIntroAction.class);
+    private static final Logger log = LoggerFactory.getLogger(FeatureIntroTask.class);
 
-    /** 内置任务类型，不出现在功能列表中 */
-    private static final List<String> BUILTIN_TASK_TYPES = List.of("FEATURE_INTRO");
-
-    private final AnnotationAiTaskConfigService configService;
+    private final TaskRegistry taskRegistry;
 
     @Autowired
-    public FeatureIntroAction(AnnotationAiTaskConfigService configService) {
-        this.configService = configService;
+    public FeatureIntroTask(TaskRegistry taskRegistry) {
+        this.taskRegistry = taskRegistry;
     }
 
     @Override
@@ -50,17 +44,15 @@ public class FeatureIntroAction implements ActionExecutor {
     }
 
     @Override
-    public ActionResult execute(ActionContext context) {
+    public TaskResult execute(ExecuteContext context) {
         Map<String, Object> params = context.getParameters();
-        log.info("[FeatureIntroAction] executing, taskId={}, params={}", context.getTaskId(), params);
+        log.info("[FeatureIntroTask] executing, taskId={}, params={}", context.getTaskId(), params);
 
         String interestTopic = params.get("interestTopic") != null
                 ? String.valueOf(params.get("interestTopic")).trim()
                 : null;
 
-        // 动态加载所有可见任务的元信息
         List<FeatureMeta> features = loadVisibleFeatures();
-
         String message = buildIntroMessage(interestTopic, features);
 
         Map<String, Object> data = new LinkedHashMap<>();
@@ -75,36 +67,45 @@ public class FeatureIntroAction implements ActionExecutor {
             return m;
         }).toList());
 
-        return ActionResult.success(message, data);
+        return TaskResult.success(message, data);
     }
 
     /**
-     * 从所有 @AiTask 注解配置中动态加载非内置任务的元信息。
+     * 从 TaskRegistry 动态加载所有非 hidden 任务的元信息。
      */
     private List<FeatureMeta> loadVisibleFeatures() {
         List<FeatureMeta> result = new ArrayList<>();
-        Map<String, AiTaskConfig> configs = configService.getAllAnnotationConfigs();
-
-        for (Map.Entry<String, AiTaskConfig> entry : configs.entrySet()) {
-            String taskType = entry.getKey();
-            AiTaskConfig config = entry.getValue();
-
-            // 跳过内置任务
-            if (BUILTIN_TASK_TYPES.contains(taskType)) {
+        for (TaskExecutor executor : taskRegistry.getAllTasks()) {
+            AiTask annotation = resolveAnnotation(executor);
+            if (annotation == null) {
+                log.debug("[FeatureIntroTask] executor {} has no @AiTask annotation, skipped",
+                        executor.getClass().getName());
                 continue;
             }
-
-            String name = config.getName() != null && !config.getName().isBlank()
-                    ? config.getName() : taskType;
-            String description = config.getDescription() != null && !config.getDescription().isBlank()
-                    ? config.getDescription() : "（该任务暂未填写功能描述）";
-            List<String> triggers = config.getKeywords() != null ? config.getKeywords() : List.of();
-
-            result.add(new FeatureMeta(name, taskType, description, triggers));
+            if (annotation.hidden()) {
+                continue;
+            }
+            String type = annotation.value();
+            String name = annotation.name().isBlank() ? type : annotation.name();
+            String description = annotation.description().isBlank()
+                    ? "（该任务暂未填写功能描述）" : annotation.description();
+            List<String> triggers = Arrays.asList(annotation.triggers());
+            result.add(new FeatureMeta(name, type, description, triggers));
         }
-
-        log.info("[FeatureIntroAction] loaded {} visible features from task configs", result.size());
+        log.info("[FeatureIntroTask] loaded {} visible features from registry", result.size());
         return result;
+    }
+
+    /**
+     * 解析 TaskExecutor 实例上的 @AiTask 注解，兼容 CGLIB 代理子类。
+     */
+    private AiTask resolveAnnotation(TaskExecutor executor) {
+        Class<?> clazz = executor.getClass();
+        AiTask annotation = clazz.getAnnotation(AiTask.class);
+        if (annotation == null && clazz.getSuperclass() != null) {
+            annotation = clazz.getSuperclass().getAnnotation(AiTask.class);
+        }
+        return annotation;
     }
 
     /**
@@ -112,7 +113,7 @@ public class FeatureIntroAction implements ActionExecutor {
      */
     private String buildIntroMessage(String interestTopic, List<FeatureMeta> features) {
         if (features.isEmpty()) {
-            return "当前系统暂未配置任何业务功能。请联系管理员添加 @AiTask 任务。";
+            return "当前系统暂未注册任何业务功能。请联系管理员配置 @AiTask 任务。";
         }
 
         if (interestTopic == null || interestTopic.isBlank()) {
@@ -127,7 +128,6 @@ public class FeatureIntroAction implements ActionExecutor {
             return sb.toString();
         }
 
-        // 按关键词模糊匹配功能项
         String lower = interestTopic.toLowerCase();
         FeatureMeta matched = features.stream()
                 .filter(f -> f.name.contains(interestTopic)
@@ -148,7 +148,6 @@ public class FeatureIntroAction implements ActionExecutor {
             return sb.toString();
         }
 
-        // 未匹配到具体功能，返回全量清单并提示
         return "暂未找到与「" + interestTopic + "」直接相关的功能。\n\n"
                 + buildIntroMessage(null, features);
     }
